tests/ui/supertrait-shadowing/assoc-type-predicates.stderr
error: rustc_dump_predicates
  --> $DIR/assoc-type-predicates.rs:25:1
   |
LL | fn a_bound<T: A<Assoc = i8>>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Binder { value: TraitPredicate(<T as std::marker::Sized>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: TraitPredicate(<T as A>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: ProjectionPredicate(Alias { kind: ProjectionTy { def_id: DefId(0:4 ~ assoc_type_predicates[HASH]::A::Assoc) }, args: [T/#0], .. }, Term::Ty(i8)), bound_vars: [] }

error: rustc_dump_predicates
  --> $DIR/assoc-type-predicates.rs:32:1
   |
LL | fn b_bound<T: B<Assoc = i16>>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Binder { value: TraitPredicate(<T as std::marker::Sized>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: TraitPredicate(<T as B>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: ProjectionPredicate(Alias { kind: ProjectionTy { def_id: DefId(0:9 ~ assoc_type_predicates[HASH]::B::Assoc) }, args: [T/#0], .. }, Term::Ty(i16)), bound_vars: [] }

error: rustc_dump_predicates
  --> $DIR/assoc-type-predicates.rs:39:1
   |
LL | fn c_bound<T: C<Assoc = i16>>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Binder { value: TraitPredicate(<T as std::marker::Sized>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: TraitPredicate(<T as C>, polarity:Positive), bound_vars: [] }
   = note: Binder { value: ProjectionPredicate(Alias { kind: ProjectionTy { def_id: DefId(0:9 ~ assoc_type_predicates[HASH]::B::Assoc) }, args: [T/#0], .. }, Term::Ty(i16)), bound_vars: [] }

error: aborting due to 3 previous errors

